@@ -3,3 +3,4 @@ best model Kolmogorov= class=Beta name=Beta dimension=1 r=1.14515 t=2.39684 a=-1
 resultBIC= class=SquareMatrix dimension=14 implementation=class=MatrixImplementation name=Unnamed rows=14 columns=14 values=[-0.506611,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,0.390135,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,26.4376,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,4.94401,3.40566,3.36873,9.04993,7.59532,36.5729,3.45423,15.9133,4.0612,2.44214,2.97694,3.35073,3.97803,2.82863,1.79769e+308,3.02206,1.79769e+308,4.87206,1.79769e+308,1.79769e+308,1.79769e+308,7.11503,1.79769e+308,1.79769e+308,4.24283,1.79769e+308,1.79769e+308,1.79769e+308,2.84271,5.25018,4.44992,10.9583,3.6054,4.34917,3.02071,17.9129,3.54591,2.94694,4.65243,3.81864,3.97857,3.81633,3.25977,4.78199,4.40705,14.8314,3.72037,4.27123,3.35483,23.6423,3.66558,3.31367,4.49168,3.98667,4.03917,3.82167,1.57993,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,1.96017,1.79769e+308,1.79769e+308,1.79553,1.79769e+308,1.79769e+308,1.79769e+308,3.82754,26.8191,20.1943,22.0736,15.3766,25.307,25.7348,25.4331,3.16515,24.2971,25.0307,21.3014,23.5995,23.4314,23.1683,2.98858,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,2.52017,1.79769e+308,2.95261,2.20348,1.79769e+308,1.79769e+308,1.79769e+308,2.84408,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,0,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,2.88821,1.79769e+308,8.7561,1.79769e+308,1.79769e+308,1.79769e+308,15.912,1.79769e+308,1.79769e+308,2.01493,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,2.81418,1.79769e+308,3.14689,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,3.28126,3.43457,3.06783,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,1.79769e+308,1.95746]
 resultKolmogorov= class=SquareMatrix dimension=11 implementation=class=MatrixImplementation name=Unnamed rows=11 columns=11 values=[0.380754,0,0,0,0,0,0,0,0,0,0,0,0.101178,0,0,0,0,0,0,0,0,0,0,0,0.935178,0,0,0,0,0,6.03204e-05,0,0,0,0,0,0.261505,0,0,0,0,0,0,0,0,0,0,0,0.102296,0.488213,0,0,0,0,0,0,0,0,0,0.0115789,0.979805,0,0,0,0,0,0,0,0,0,0.00855122,0,0.256542,0,0,0,0,0,0,0,0,0,0,0,0.515105,0,0,0,0,0,0,0,0.000639599,0,7.75439e-06,0,0.268376,0,0,0,0,0,0,0,0,0,0,0,0.556345,0,0,0,0,0,0,0,0,0,0,0,0.640406]
 resultChiSquared= class=SquareMatrix dimension=2 implementation=class=MatrixImplementation name=Unnamed rows=2 columns=2 values=[0,0,0,0.892467]
+class=TestResult name=Unnamed type=Kolmogorov Normal/Normal binaryQualityMeasure=true p-value threshold=0.05 p-value=0.554765 description=[sampleNormal vs sample Normal]
